2012-09-30  Tag Release_4_6_1

2012-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Fix bug preventing explicit assignment of color
	sequence in stacked histograms.

	* src/datafile.c src/util.c (streq) src/util.h:  New utility function
	streq(char *a, char *b) returns TRUE if a and b are identical save for
	leading and trailing whitespace.  Use this for matching requested string
	labels in a using spec to the actual column header text in a data file.
	Bug #3571243

	* src/axis.c src/axis.h src/mouse.c src/plot2d.c src/util.c:
	Allow zooming of plots that originally had an explicit range in the
	plot command.

2012-09-22  Ethan A Merritt  <merritt@u.washington.edu>

	* lisp/configure.in docs/Makefile.in:
	Backport emacs+info build configuration from 4.7

2012-09-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: valgrind found a code path in which the key placement
	was never initialized.

2012-09-18  Ethan A Merritt  <merritt@u.washington.edu>

	* lisp/gnuplot.el: elisp is now getting serious about a syntax change
	announced 10+ years ago.   s/(` (/`(/

	* lisp/configure.in lisp/Makefile.am:  The autoconfigure scripting for
	the lisp directory is failing when $(EMACS) is redefined by the user.
	But the failure is only relevant to testing/patching info-look.el for
	very old versions of emacs.  Deal with it by simply assuming that
	everyone has an emacs version newer than 20.3 and therefore no patching
	is needed.

	* src/graphics.c:  Incorrect default layout of rotated xtic labels.
	Bug #3568817

2012-09-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps term/post.trm:
	Handle transparent fill patterns in PS_fillbox() in the same way
	as is already done in PS_filled_polygon().
	Bug #3567035

	* src/eval.c (fill_gpval_axis):  Do not swap axis min/max values when
	storing them for later mousing calculations by the canvas, svg, and
	other terminals.  Fixes bug in the mouse readout from reversed axes.
